--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,15 @@
+{% load static from staticfiles %}
+
 <!doctype html>
-<!DOCTYPE html>
 <html>
-<head>
-	<title>{% block title %}{% endblock%}</title>
-</head>
-<body>{% block content %}{% endblock%}</body>
+	<head>
+		<title>{% block title %} {% endblock %}</title>
+		<link rel="stylesheet" href="{% static 'css/layout.css' %}">
+	</head>
+
+	<body>
+		<div class="site-conatiner">
+		{% block content %} {% endblock %}
+		</div>
+	</body>
 </html>
