--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div class="site-conatiner">
+		<div class="site-container">
 		{% block content %} {% endblock %}
 		</div>
 	</body>
