--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,3 +2,10 @@
 	text-align: center;
 	width: 100%;
 }
+
+.steps{
+	text-align: center;
+	width: 100%;
+	border-style: solid;
+    border-color: green;
+}
